--- a/style.css
+++ b/style.css
@@ -3,5 +3,38 @@ html { box-sizing: border-box; }
 
 body {
 	font: 18px sans-serif;
+	background-color: blanchedalmond;
+	text-align: center;
+}
+.form-policko, .form-zaskrtavacie{
+	margin-bottom: 15px;
 }
 
+.form-policko label{
+	display: block; 	/* z toho inputu (riadkoveho prvku) som urobila blokovy */
+	color: black;
+	font-size: 70%;
+}
+.form-policko input,
+.form-policko textarea, 
+.form-policko select{
+	background-color: rgb(149, 168, 135);
+	border: 2px solid;
+	padding: 10px;
+	border-radius: 8px;
+}
+.form-policko input:focus,
+.form-policko textarea:focus, 
+.form-policko select:focus {
+	border:2px solid red;
+	background-color: rgb(178, 158, 196);
+	outline: 0;
+}
+button{
+	border-radius: 8px;
+	background-color: greenyellow;
+}
+.form-zaskrtavacie label{
+	color: green;
+	font-size: 70%;
+}
